# CPP-PROJET-2022-JEU

./: CMakeLists.txt  Makefile  README.md  main.cpp  projet-uml.drawio
controler/hrc/: Controller.hpp
controler/src/: Controller.cpp
hrc/controler/: Controller.hpp
hrc/controller/: ControlerCarcassonne.hpp  Controller.hpp  ControllerCarcassonne.hpp  ControllerDominos.hpp  ControllerTrax.hpp
hrc/model/: Sac.hpp
hrc/model/enum/: colorCarcassonne.hpp  colorTrax.hpp  directionTuile.hpp  environment.hpp  roleCarcassonne.hpp
hrc/model/joueurs/: Player.hpp  PlayerCarcassonne.hpp  PlayerDominos.hpp  PlayerTrax.hpp
hrc/model/plateau/: Pion.hpp  Plateau.hpp  PlateauCarcassonne.hpp  PlateauDominos.hpp  PlateauTrax.hpp
hrc/model/tuile/: Tuile.hpp  TuileCarcassonne.hpp  TuileTrax.hpp
hrc/model/vector/: AxeVector.hpp
hrc/view/: TuileGB.hpp
model/hrc/: Pion.hpp  Plateau.hpp  Sac.hpp
model/hrc/enum/: colorCarcassonne.hpp  directionTuile.hpp  environment.hpp
model/hrc/joueurs/: Player.hpp  PlayerCarcassonne.hpp  PlayerDominos.hpp  PlayerTrax.hpp
model/hrc/plateau/: Pion.hpp  Plateau.hpp  PlateauCarcassonne.hpp  PlateauDominos.hpp  PlateauTrax.hpp
model/hrc/tuile/: Tuile.hpp  TuileCarcassonne.hpp  TuileDominos.hpp  TuileTrax.hpp
model/hrc/vector/: AxeVector.hpp  AxeVector.tpp
model/src/: Pion.cpp  Plateau.cpp  Sac.cpp
model/src/joueurs/: Player.cpp  Player.tpp  PlayerCarcassonne.tpp  PlayerDominos.cpp  PlayerTrax.cpp
model/src/plateau/: Pion.cpp  Plateau.cpp  Plateau.tpp  PlateauCarcassonne.cpp  PlateauCarcassonne.tpp  PlateauDominos.cpp  PlateauTrax.cpp
model/src/tuile/: Tuile.cpp  TuileCarcassonne.cpp  TuileDominos.cpp  TuileTrax.cpp
src/controler/: Controller.cpp  Controller.tpp
src/controller/: ControlerCarcassonne.cpp  Controller.cpp  Controller.tpp  ControllerCarcassonne.cpp  ControllerDominos.cpp  ControllerTrax.cpp
src/model/: Sac.cpp
src/model/joueurs/: Player.tpp  PlayerCarcassonne.cpp  PlayerCarcassonne.tpp  PlayerDominos.cpp  PlayerTrax.cpp
src/model/plateau/: Pion.cpp  Plateau.tpp  PlateauCarcassonne.cpp  PlateauCarcassonne.tpp  PlateauDominos.cpp  PlateauTrax.cpp
src/model/tuile/: Tuile.cpp  Tuile.tpp  (+4 more)
src/view/: DominoStateView.cpp  DominoStateView.h  MenuView.cpp  MenuView.h  PlateauDominoStateView.cpp  PlateauDominoStateView.h  PlateauTraxStateView.cpp  PlateauTraxStateView.h  PositionItem.cpp  PositionItem.h  SettingsStateView.cpp  SettingsStateView.h  State.h  TuileGB.cpp  TuileTraxObjView.cpp  TuileTraxObjView.h  TuileView.cpp  TuileView.h  mainTest.cpp
view/hrc/: TuileGB.hpp
view/src/: TuileGB.cpp
(+21 files in other folders)
